--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -66,6 +66,8 @@
                 <%#= link_to t('.confirm_account_link'), confirmation_url(@resource, {confirmation_token: @token, config: message['client-config'].to_s, redirect_url: message['redirect-url']}).html_safe %>
               </a>
             </p>
+            <br>
+            <b>This link expires in 1 hour</b>
           </td>
         </tr>
         <tr>
